smart-lists-2000/main/default/objects/Smart_List_Action__mdt/fields/Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Action_Label__c</fullName>
    <inlineHelpText>Enter a text value or $Label­.CustomLabelName</inlineHelpText>
    <label>Action Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>