smart-lists-2000/main/default/objects/Smart_List_Action__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autolaunched Flow</fullName>
                <default>true</default>
                <label>Autolaunched Flow</label>
            </value>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>