smart-lists-2000/main/default/objects/Smart_List_Action__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <inlineHelpText>API name of the custom permission required for executing this action. Leave blank if not controlled by custom permission</inlineHelpText>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>