smart-lists-2000/main/default/objects/Smart_List_Action__mdt/fields/Display_Position__c.field-meta.xml
<CustomField>
    <fullName>Display_Position__c</fullName>
    <label>Display Position</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>