smart-lists-2000/main/default/objects/Smart_List_Action__mdt/fields/Screenflow_Modal_Height__c.field-meta.xml
<CustomField>
    <fullName>Screenflow_Modal_Height__c</fullName>
    <defaultValue>400</defaultValue>
    <inlineHelpText>Height in pixel of the Screenflow modal</inlineHelpText>
    <label>Screenflow Modal Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>