smart-lists-2000/main/default/objects/Smart_List_Action__mdt/validationRules/Check_List_Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_List_Availability</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(List_Action_Availibility__c) ) &amp;&amp;  ISPICKVAL( Type__c , &apos;List Action&apos;)</errorConditionFormula>
    <errorDisplayField>List_Action_Availibility__c</errorDisplayField>
    <errorMessage>List Action Availability is required for List Actions</errorMessage>
</ValidationRule>