smart-lists-2000/main/default/objects/Smart_List_Action__mdt/validationRules/Check_Screenflow_Modal_Height.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Screenflow_Modal_Height</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Category__c , &apos;Screen Flow&apos;) &amp;&amp; ISBLANK(Screenflow_Modal_Height__c )</errorConditionFormula>
    <errorDisplayField>Screenflow_Modal_Height__c</errorDisplayField>
    <errorMessage>Screenflow Modal Height is required for Category Screen Flow</errorMessage>
</ValidationRule>